css changes - scroll overflow fix

--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -12,8 +12,8 @@ p.small{
 
 }
 p{
-  margin-top:3px;
-  margin-bottom:3px;
+  margin-top:0em;
+  margin-bottom:1em;
 }
 p.large{
   font-family: 'Quicksand', sans-serif;
